--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - FCC: Personal Portfolio</title>
+  <title>FCC - Akshay's Portfolio</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'><link rel="stylesheet" href="./style.css">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
